# chrgfx

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  graphics.md
app/chr2png/: CMakeLists.txt  app.hpp  app.hpp.cfg  main.cpp  setup.hpp
app/palview/: CMakeLists.txt  app.hpp  main.cpp  setup.hpp
app/png2chr/: CMakeLists.txt  app.hpp  main.cpp  setup.hpp
app/shared/: CMakeLists.txt  blob.hpp  cfgload.cpp  cfgload.hpp  filesys.hpp  fstreams.hpp  gfxdef_builder.hpp  gfxdefman.hpp  lineread.hpp  shared.cpp  shared.hpp  strutil.hpp  usage.cpp  usage.hpp
chr2png/: CMakeLists.txt
chr2png/src/: app.hpp  app.hpp.cfg  main.cpp
chrgfx/: CMakeLists.txt
chrgfx/inc/: bank.hpp  basic_gfx.hpp  binstream.hpp  blob.hpp  buffer.hpp  builtin_defs.hpp  chr_conv.hpp  chrbank.hpp  chrconv.hpp  chrdef.hpp  chrgfx.hpp  colconv.hpp  coldef.hpp  conv_chr.hpp  conv_col.hpp  conv_pal.hpp  custom.hpp  filesys.hpp  gfxdef.hpp  imgfmt_png.hpp  pal_conv.hpp  palconv.hpp  paldef.hpp  pixbuf.hpp  png_chunk.hpp  png_render.hpp  pngchunk.hpp  render.hpp  rgb_layout.hpp  stdgfx.hpp  types.hpp  utils.hpp
chrgfx/include/: buffer.hpp  builtin_defs.hpp  chrconv.hpp  chrdef.hpp  chrgfx.hpp  colconv.hpp  coldef.hpp  gfxdef.hpp  global.hpp  palconv.hpp  paldef.hpp  png_chunk.hpp  png_render.hpp  rgb_layout.hpp  types.hpp
chrgfx/src/: app.hpp  app.hpp.cfg  bank.cpp  bank.hpp  basic_gfx.cpp  buffer.hpp  builtin_defs.cpp  builtin_defs.hpp  chr_conv.cpp  chrbank.cpp  chrbank.hpp  chrconv.cpp  chrconv.hpp  chrdef.cpp  chrdef.hpp  chrgfx.hpp  colconv.cpp  colconv.hpp  coldef.cpp  coldef.hpp  conv_chr.cpp  conv_chr.hpp  conv_col.cpp  conv_col.hpp  conv_pal.cpp  conv_pal.hpp  custom.cpp  gfxdef.cpp  gfxdef.hpp  global.hpp  imgfmt_png.cpp  pal_conv.cpp  palconv.cpp  palconv.hpp  paldef.cpp  paldef.hpp  parsing.cpp  parsing.hpp  png_chunk.cpp  png_chunk.hpp  (+15 more)
docs/html/: annotated.html  buffer_8hpp.html  buffer_8hpp_source.html  builtin__defs_8hpp_source.html  chrconv_8hpp_source.html  chrdef_8hpp_source.html  chrgfx_8hpp_source.html  classbuffer-members.html  classbuffer.html  classchrgfx_1_1chrdef-members.html  classchrgfx_1_1chrdef.html  classchrgfx_1_1coldef-members.html  classchrgfx_1_1coldef.html  classchrgfx_1_1gfxdef-members.html  classchrgfx_1_1gfxdef.html  classchrgfx_1_1paldef-members.html  classchrgfx_1_1paldef.html  classchrgfx_1_1refcoldef-members.html  classchrgfx_1_1refcoldef.html  classchrgfx_1_1rgb__layout-members.html  classchrgfx_1_1rgb__layout.html  classchrgfx_1_1rgbcoldef-members.html  classchrgfx_1_1rgbcoldef.html  classes.html  colconv_8hpp_source.html  coldef_8hpp_source.html  custom_8hpp_source.html  dir_8c155dcf6816659d141301acb4df0fa0.html  dir_ad7c7d6899a2746918dd3c1a40796fb0.html  files.html  functions.html  functions_func.html  functions_vars.html  gfxdef_8hpp_source.html  hierarchy.html  index.html  menudata.js  namespacechrgfx_1_1custom.html  namespacechrgfx_1_1gfxdefs.html  namespacemembers.html  (+17 more)
gfxdef/: README.md  capcom_cps.gfxdef  capcom_cps_16.gfxdef  generic_1bpp.gfxdef  gfxdefs  nintendo_fc.gfxdef  nintendo_gameboy.gfxdef  nintendo_gb.gfxdef  nintendo_gbc.gfxdef  nintendo_gbp.gfxdef  nintendo_sfc.gfxdef  nintendo_vb.gfxdef  nintendo_virtualboy.gfxdef  palette_tilelayerpro.gfxdef  pce_sprites.gfxdev  pce_tiles.gfxdev  sega_8bit.gfxdef  sega_gg.gfxdef  sega_md.gfxdef  sega_ms.gfxdef  seta_16_4bpp.gfxdef  snk_neogeo.gfxdef  snk_neogeocd.gfxdef  snk_neogeopocket.gfxdef  snk_neogeopocketcolor.gfxdef
inc/: 1bpp_gfx.hpp  capcom_cps_gfx.hpp  chr_conv.hpp  chrdecode.hpp  chrdef.hpp  commondefs.hpp  example.paldef  gfx_types.hpp  global.hpp  import_def.hpp  import_defs.hpp  import_gfxdef.hpp  internal_defs.hpp  main.hpp  nintendo_fc_gfx.hpp  nintendo_gb_gfx.hpp  nintendo_sfc_gfx.hpp  nintendo_vb.hpp  pal_conv.hpp  paldecode.hpp  paldef.hpp  pngchunk.hpp  render.hpp  sega_8bit_gfx.hpp  sega_md_gfx.hpp  sega_pzlcnst_gfx.hpp  snk_neogeo.hpp  snk_ngp_gfx.hpp  tlp_palette.hpp  types.hpp  utils.hpp
lib/chrgfx/: CMakeLists.txt  app.hpp  builtin_defs.cpp  builtin_defs.hpp  chrconv.cpp  chrconv.hpp  chrdef.cpp  chrdef.hpp  chrgfx.hpp  chrsetconv.cpp  chrsetconv.hpp  colconv.cpp  colconv.hpp  coldef.cpp  coldef.hpp  custom.cpp  custom.hpp  gfxdef.cpp  gfxdef.hpp  image.hpp  image_types.hpp  imageformat_png.cpp  imageformat_png.hpp  imaging.cpp  imaging.hpp  img_process.cpp  img_process.hpp  imgfmt_png.cpp  imgfmt_png.hpp  palconv.cpp  palconv.hpp  paldef.hpp  pixmap.hpp  rgb_layout.cpp  rgb_layout.hpp  strutil.hpp  utils.cpp  utils.hpp
man/: chr2png  png2chr
png2chr/: CMakeLists.txt
png2chr/src/: app.hpp  app.hpp.cfg  main.cpp
share/: README.md  gfxdefs
share/gfxdef/: README.md  gfxdefs
shared/inc/: defblocks.hpp  import_defs.hpp  shared.hpp  vd.hpp
shared/src/: defblocks.cpp  defblocks.hpp  filesys.cpp  filesys.hpp  fstreams.hpp  gfxdef_builder.hpp  gfxprofile.cpp  gfxprofile.hpp  import_defs.cpp  import_defs.cpp.new  import_defs.hpp  import_defs_old.cpp  parsing.hpp  parsing.hpp.old  shared.cpp  shared.hpp  strutil.hpp  usage.cpp  usage.hpp  vd.cpp  (+2 more)
src/: 1bpp_gfx.cpp  CMakeLists.txt  README.md  capcom_cps_gfx.cpp  chr_conv.cpp  chrdecode.cpp  import_def.cpp  import_defs.cpp  import_gfxdef.cpp  main.cpp  nintendo_fc_gfx.cpp  nintendo_gb_gfx.cpp  nintendo_sfc_gfx.cpp  nintendo_vb.cpp  pal_conv.cpp  paldecode.cpp  pngchunk.cpp  render.cpp  sega_8bit_gfx.cpp  sega_md_gfx.cpp  sega_pzlcnst_gfx.cpp  snk_neogeo.cpp  snk_ngp_gfx.cpp  tlp_palette.cpp  utils.cpp
src/chr2png/: CMakeLists.txt  app.hpp  app.hpp.cfg  main.cpp
src/chrgfx/: CMakeLists.txt  basic_gfx.cpp  basic_gfx.hpp  builtin_defs.cpp  builtin_defs.hpp  chrconv.cpp  chrconv.hpp  chrdef.cpp  chrdef.hpp  chrgfx.hpp  chrsetconv.cpp  chrsetconv.hpp  colconv.cpp  colconv.hpp  coldef.hpp  custom.cpp  gfxdef.cpp  imgfmt_png.cpp  palconv.cpp  palconv.hpp  paldef.cpp  paldef.hpp  rgb_layout.hpp  strutil.hpp  tilesetconv.cpp  tilesetconv.hpp  types.hpp  utils.cpp  utils.hpp
src/palview/: CMakeLists.txt  app.hpp  main.cpp  setup.hpp
src/png2chr/: CMakeLists.txt  app.hpp  main.cpp
(+48 files in other folders)
